--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@pancakeswap-libs/sdk-v2",
+  "name": "@zswap/sdk",
   "license": "MIT",
-  "version": "2.2.0",
-  "description": "🛠 An SDK for building applications on top of pancakeswap.",
+  "version": "0.0.2",
+  "description": "🛠 An SDK for building applications on top of ZSwap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancakeswap-sdk.git",
+  "repository": "https://github.com/dex-zswap/zswap-sdk.git",
   "keywords": [
     "pancakeswap",
     "ethereum"
